// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`<IconHourglassRunningOut /> DOM element add "id" attribute to DOM element 1`] = `
<div>
  <svg
    height={224}
    id="hasId"
    viewBox="0 0 175 224"
    width={175}
    xmlnsXlink="http://www.w3.org/1999/xlink"
  >
      
    <defs>
          
      <path
        d="M0 0h118v147H0z"
        id="a"
      />
          
      <path
        d="M0 .075h174.741v13.658H0z"
        id="c"
      />
          
      <path
        d="M0 0h174.741v13.66H0z"
        id="e"
      />
        
    </defs>
      
    <g
      fill="none"
      fillRule="evenodd"
    >
          
      <path
        d="M28.768 213.642l-.914-.034c.687-18.65 3.97-36.753 9.492-52.354l.861.302c-5.493 15.516-8.757 33.527-9.44 52.086m3.014 0l-.913-.034c.28-7.583.984-15.108 2.093-22.365l.903.137a195.438 195.438 0 0 0-2.083 22.262"
        fill="#92D7E7"
      />
          
      <g
        transform="translate(24 60)"
      >
              
        <mask
          fill="#fff"
          id="b"
        >
                  
          <use
            xlinkHref="#a"
          />
                
        </mask>
              
        <path
          d="M0 147h118c0-10.889-39.206-32.615-53.645-38.176V58.686c8.122-3.133 37.901-4.242 53.243-58.686 0 0-99.38 24.175-93.834 31.873 10.916 15.15 23.19 22.062 31.567 25.173v50.597C22.844 109.203 0 127.037 0 147"
          fill="orange"
          mask="url(#b)"
        />
            
      </g>
          
      <path
        d="M112.962 119.338l-6.78-6.81 6.78-4.49c20.958-17.718 34.945-52.295 36.545-91.45h-37.573c-.541 42.797-6.007 80.138-28.079 98.797 22.13 18.709 27.566 53.269 28.084 98.797h37.582c-1.492-40.975-14.92-76.55-36.56-94.844"
        fill="#ACD2ED"
        opacity={0.538}
      />
          
      <path
        d="M61.346 108.417C40.319 90.64 26.272 55.538 24.686 16.809l.913-.037c1.575 38.482 15.499 73.333 36.337 90.95l-.59.695zM25.537 213.642l-.913-.034c1.518-41.265 15.245-76.74 36.722-94.897l.59.696c-21.283 17.993-34.89 53.22-36.399 94.235"
        fill="#92D7E7"
      />
          
      <path
        d="M65.867 108.417c-11.827-10-21.53-25.33-28.061-44.333l.864-.295c6.477 18.848 16.086 34.04 27.787 43.932l-.59.696z"
        fill="#92D7E7"
      />
          
      <path
        d="M70.388 108.416c-5.622-4.753-10.805-10.759-15.404-17.85l.767-.495c4.55 7.017 9.673 12.955 15.227 17.651l-.59.694z"
        fill="#92D7E7"
      />
          
      <path
        d="M19.147 214.638h136.447c-.928-42.616-14.872-79.214-37.698-98.512l-4.108-3.472 4.108-3.472c22.123-18.704 36.694-57.02 37.692-98.512H19.153c.999 41.49 15.57 79.808 37.692 98.512l4.108 3.472-4.108 3.472c-22.826 19.3-36.77 55.897-37.698 98.512zm145.629 9.105H9.966v-4.553c0-44.79 13.799-84.117 37.137-106.548C24.41 90.554 9.965 49.504 9.965 6.117V1.564h154.81v4.553c0 43.388-14.443 84.437-37.137 106.525 23.34 22.431 37.138 61.757 37.138 106.548v4.553z"
        fill="#ACD2ED"
      />
          
      <g
        transform="translate(0 .836)"
      >
              
        <mask
          fill="#fff"
          id="d"
        >
                  
          <use
            xlinkHref="#c"
          />
                
        </mask>
              
        <path
          d="M171.088 13.733H3.653C1.635 13.733 0 12.673 0 11.365V2.442C0 1.134 1.635.074 3.653.074h167.435c2.018 0 3.654 1.06 3.654 2.368v8.923c0 1.308-1.636 2.368-3.654 2.368"
          fill="#0B7EB5"
          mask="url(#d)"
        />
            
      </g>
          
      <g
        transform="translate(0 210.267)"
      >
              
        <mask
          fill="#fff"
          id="f"
        >
                  
          <use
            xlinkHref="#e"
          />
                
        </mask>
              
        <path
          d="M171.088 13.659H3.653C1.635 13.659 0 12.599 0 11.29V2.368C0 1.059 1.635 0 3.653 0h167.435c2.018 0 3.654 1.06 3.654 2.368v8.923c0 1.308-1.636 2.368-3.654 2.368"
          fill="#0B7EB5"
          mask="url(#f)"
        />
            
      </g>
        
    </g>
  </svg>
</div>
`;

exports[`<IconHourglassRunningOut /> DOM element add "id" attribute to DOM element 2`] = `".htz-a{vertical-align:-0.15em}.htz-b{color:inherit}.htz-c{fill:#FFF}"`;

exports[`<IconHourglassRunningOut /> DOM element add "onClick" attribute to DOM element 1`] = `
<div>
  <svg
    height={224}
    id={[Function]}
    viewBox="0 0 175 224"
    width={175}
    xmlnsXlink="http://www.w3.org/1999/xlink"
  >
      
    <defs>
          
      <path
        d="M0 0h118v147H0z"
        id="a"
      />
          
      <path
        d="M0 .075h174.741v13.658H0z"
        id="c"
      />
          
      <path
        d="M0 0h174.741v13.66H0z"
        id="e"
      />
        
    </defs>
      
    <g
      fill="none"
      fillRule="evenodd"
    >
          
      <path
        d="M28.768 213.642l-.914-.034c.687-18.65 3.97-36.753 9.492-52.354l.861.302c-5.493 15.516-8.757 33.527-9.44 52.086m3.014 0l-.913-.034c.28-7.583.984-15.108 2.093-22.365l.903.137a195.438 195.438 0 0 0-2.083 22.262"
        fill="#92D7E7"
      />
          
      <g
        transform="translate(24 60)"
      >
              
        <mask
          fill="#fff"
          id="b"
        >
                  
          <use
            xlinkHref="#a"
          />
                
        </mask>
              
        <path
          d="M0 147h118c0-10.889-39.206-32.615-53.645-38.176V58.686c8.122-3.133 37.901-4.242 53.243-58.686 0 0-99.38 24.175-93.834 31.873 10.916 15.15 23.19 22.062 31.567 25.173v50.597C22.844 109.203 0 127.037 0 147"
          fill="orange"
          mask="url(#b)"
        />
            
      </g>
          
      <path
        d="M112.962 119.338l-6.78-6.81 6.78-4.49c20.958-17.718 34.945-52.295 36.545-91.45h-37.573c-.541 42.797-6.007 80.138-28.079 98.797 22.13 18.709 27.566 53.269 28.084 98.797h37.582c-1.492-40.975-14.92-76.55-36.56-94.844"
        fill="#ACD2ED"
        opacity={0.538}
      />
          
      <path
        d="M61.346 108.417C40.319 90.64 26.272 55.538 24.686 16.809l.913-.037c1.575 38.482 15.499 73.333 36.337 90.95l-.59.695zM25.537 213.642l-.913-.034c1.518-41.265 15.245-76.74 36.722-94.897l.59.696c-21.283 17.993-34.89 53.22-36.399 94.235"
        fill="#92D7E7"
      />
          
      <path
        d="M65.867 108.417c-11.827-10-21.53-25.33-28.061-44.333l.864-.295c6.477 18.848 16.086 34.04 27.787 43.932l-.59.696z"
        fill="#92D7E7"
      />
          
      <path
        d="M70.388 108.416c-5.622-4.753-10.805-10.759-15.404-17.85l.767-.495c4.55 7.017 9.673 12.955 15.227 17.651l-.59.694z"
        fill="#92D7E7"
      />
          
      <path
        d="M19.147 214.638h136.447c-.928-42.616-14.872-79.214-37.698-98.512l-4.108-3.472 4.108-3.472c22.123-18.704 36.694-57.02 37.692-98.512H19.153c.999 41.49 15.57 79.808 37.692 98.512l4.108 3.472-4.108 3.472c-22.826 19.3-36.77 55.897-37.698 98.512zm145.629 9.105H9.966v-4.553c0-44.79 13.799-84.117 37.137-106.548C24.41 90.554 9.965 49.504 9.965 6.117V1.564h154.81v4.553c0 43.388-14.443 84.437-37.137 106.525 23.34 22.431 37.138 61.757 37.138 106.548v4.553z"
        fill="#ACD2ED"
      />
          
      <g
        transform="translate(0 .836)"
      >
              
        <mask
          fill="#fff"
          id="d"
        >
                  
          <use
            xlinkHref="#c"
          />
                
        </mask>
              
        <path
          d="M171.088 13.733H3.653C1.635 13.733 0 12.673 0 11.365V2.442C0 1.134 1.635.074 3.653.074h167.435c2.018 0 3.654 1.06 3.654 2.368v8.923c0 1.308-1.636 2.368-3.654 2.368"
          fill="#0B7EB5"
          mask="url(#d)"
        />
            
      </g>
          
      <g
        transform="translate(0 210.267)"
      >
              
        <mask
          fill="#fff"
          id="f"
        >
                  
          <use
            xlinkHref="#e"
          />
                
        </mask>
              
        <path
          d="M171.088 13.659H3.653C1.635 13.659 0 12.599 0 11.29V2.368C0 1.059 1.635 0 3.653 0h167.435c2.018 0 3.654 1.06 3.654 2.368v8.923c0 1.308-1.636 2.368-3.654 2.368"
          fill="#0B7EB5"
          mask="url(#f)"
        />
            
      </g>
        
    </g>
  </svg>
</div>
`;

exports[`<IconHourglassRunningOut /> DOM element add "onClick" attribute to DOM element 2`] = `".htz-a{vertical-align:-0.15em}.htz-b{color:inherit}.htz-c{fill:#FFF}"`;

exports[`<IconHourglassRunningOut /> DOM element pass attributes defined in the "attrs" prop to the DOM element 1`] = `
<div>
  <svg
    height={224}
    viewBox="0 0 175 224"
    width={175}
    xmlnsXlink="http://www.w3.org/1999/xlink"
  >
      
    <defs>
          
      <path
        d="M0 0h118v147H0z"
        id="a"
      />
          
      <path
        d="M0 .075h174.741v13.658H0z"
        id="c"
      />
          
      <path
        d="M0 0h174.741v13.66H0z"
        id="e"
      />
        
    </defs>
      
    <g
      fill="none"
      fillRule="evenodd"
    >
          
      <path
        d="M28.768 213.642l-.914-.034c.687-18.65 3.97-36.753 9.492-52.354l.861.302c-5.493 15.516-8.757 33.527-9.44 52.086m3.014 0l-.913-.034c.28-7.583.984-15.108 2.093-22.365l.903.137a195.438 195.438 0 0 0-2.083 22.262"
        fill="#92D7E7"
      />
          
      <g
        transform="translate(24 60)"
      >
              
        <mask
          fill="#fff"
          id="b"
        >
                  
          <use
            xlinkHref="#a"
          />
                
        </mask>
              
        <path
          d="M0 147h118c0-10.889-39.206-32.615-53.645-38.176V58.686c8.122-3.133 37.901-4.242 53.243-58.686 0 0-99.38 24.175-93.834 31.873 10.916 15.15 23.19 22.062 31.567 25.173v50.597C22.844 109.203 0 127.037 0 147"
          fill="orange"
          mask="url(#b)"
        />
            
      </g>
          
      <path
        d="M112.962 119.338l-6.78-6.81 6.78-4.49c20.958-17.718 34.945-52.295 36.545-91.45h-37.573c-.541 42.797-6.007 80.138-28.079 98.797 22.13 18.709 27.566 53.269 28.084 98.797h37.582c-1.492-40.975-14.92-76.55-36.56-94.844"
        fill="#ACD2ED"
        opacity={0.538}
      />
          
      <path
        d="M61.346 108.417C40.319 90.64 26.272 55.538 24.686 16.809l.913-.037c1.575 38.482 15.499 73.333 36.337 90.95l-.59.695zM25.537 213.642l-.913-.034c1.518-41.265 15.245-76.74 36.722-94.897l.59.696c-21.283 17.993-34.89 53.22-36.399 94.235"
        fill="#92D7E7"
      />
          
      <path
        d="M65.867 108.417c-11.827-10-21.53-25.33-28.061-44.333l.864-.295c6.477 18.848 16.086 34.04 27.787 43.932l-.59.696z"
        fill="#92D7E7"
      />
          
      <path
        d="M70.388 108.416c-5.622-4.753-10.805-10.759-15.404-17.85l.767-.495c4.55 7.017 9.673 12.955 15.227 17.651l-.59.694z"
        fill="#92D7E7"
      />
          
      <path
        d="M19.147 214.638h136.447c-.928-42.616-14.872-79.214-37.698-98.512l-4.108-3.472 4.108-3.472c22.123-18.704 36.694-57.02 37.692-98.512H19.153c.999 41.49 15.57 79.808 37.692 98.512l4.108 3.472-4.108 3.472c-22.826 19.3-36.77 55.897-37.698 98.512zm145.629 9.105H9.966v-4.553c0-44.79 13.799-84.117 37.137-106.548C24.41 90.554 9.965 49.504 9.965 6.117V1.564h154.81v4.553c0 43.388-14.443 84.437-37.137 106.525 23.34 22.431 37.138 61.757 37.138 106.548v4.553z"
        fill="#ACD2ED"
      />
          
      <g
        transform="translate(0 .836)"
      >
              
        <mask
          fill="#fff"
          id="d"
        >
                  
          <use
            xlinkHref="#c"
          />
                
        </mask>
              
        <path
          d="M171.088 13.733H3.653C1.635 13.733 0 12.673 0 11.365V2.442C0 1.134 1.635.074 3.653.074h167.435c2.018 0 3.654 1.06 3.654 2.368v8.923c0 1.308-1.636 2.368-3.654 2.368"
          fill="#0B7EB5"
          mask="url(#d)"
        />
            
      </g>
          
      <g
        transform="translate(0 210.267)"
      >
              
        <mask
          fill="#fff"
          id="f"
        >
                  
          <use
            xlinkHref="#e"
          />
                
        </mask>
              
        <path
          d="M171.088 13.659H3.653C1.635 13.659 0 12.599 0 11.29V2.368C0 1.059 1.635 0 3.653 0h167.435c2.018 0 3.654 1.06 3.654 2.368v8.923c0 1.308-1.636 2.368-3.654 2.368"
          fill="#0B7EB5"
          mask="url(#f)"
        />
            
      </g>
        
    </g>
  </svg>
</div>
`;

exports[`<IconHourglassRunningOut /> DOM element pass attributes defined in the "attrs" prop to the DOM element 2`] = `".htz-a{vertical-align:-0.15em}.htz-b{color:inherit}.htz-c{fill:#FFF}"`;

exports[`<IconHourglassRunningOut /> DOM element render correctly when no props are passed 1`] = `
<div>
  <svg
    height={224}
    viewBox="0 0 175 224"
    width={175}
    xmlnsXlink="http://www.w3.org/1999/xlink"
  >
      
    <defs>
          
      <path
        d="M0 0h118v147H0z"
        id="a"
      />
          
      <path
        d="M0 .075h174.741v13.658H0z"
        id="c"
      />
          
      <path
        d="M0 0h174.741v13.66H0z"
        id="e"
      />
        
    </defs>
      
    <g
      fill="none"
      fillRule="evenodd"
    >
          
      <path
        d="M28.768 213.642l-.914-.034c.687-18.65 3.97-36.753 9.492-52.354l.861.302c-5.493 15.516-8.757 33.527-9.44 52.086m3.014 0l-.913-.034c.28-7.583.984-15.108 2.093-22.365l.903.137a195.438 195.438 0 0 0-2.083 22.262"
        fill="#92D7E7"
      />
          
      <g
        transform="translate(24 60)"
      >
              
        <mask
          fill="#fff"
          id="b"
        >
                  
          <use
            xlinkHref="#a"
          />
                
        </mask>
              
        <path
          d="M0 147h118c0-10.889-39.206-32.615-53.645-38.176V58.686c8.122-3.133 37.901-4.242 53.243-58.686 0 0-99.38 24.175-93.834 31.873 10.916 15.15 23.19 22.062 31.567 25.173v50.597C22.844 109.203 0 127.037 0 147"
          fill="orange"
          mask="url(#b)"
        />
            
      </g>
          
      <path
        d="M112.962 119.338l-6.78-6.81 6.78-4.49c20.958-17.718 34.945-52.295 36.545-91.45h-37.573c-.541 42.797-6.007 80.138-28.079 98.797 22.13 18.709 27.566 53.269 28.084 98.797h37.582c-1.492-40.975-14.92-76.55-36.56-94.844"
        fill="#ACD2ED"
        opacity={0.538}
      />
          
      <path
        d="M61.346 108.417C40.319 90.64 26.272 55.538 24.686 16.809l.913-.037c1.575 38.482 15.499 73.333 36.337 90.95l-.59.695zM25.537 213.642l-.913-.034c1.518-41.265 15.245-76.74 36.722-94.897l.59.696c-21.283 17.993-34.89 53.22-36.399 94.235"
        fill="#92D7E7"
      />
          
      <path
        d="M65.867 108.417c-11.827-10-21.53-25.33-28.061-44.333l.864-.295c6.477 18.848 16.086 34.04 27.787 43.932l-.59.696z"
        fill="#92D7E7"
      />
          
      <path
        d="M70.388 108.416c-5.622-4.753-10.805-10.759-15.404-17.85l.767-.495c4.55 7.017 9.673 12.955 15.227 17.651l-.59.694z"
        fill="#92D7E7"
      />
          
      <path
        d="M19.147 214.638h136.447c-.928-42.616-14.872-79.214-37.698-98.512l-4.108-3.472 4.108-3.472c22.123-18.704 36.694-57.02 37.692-98.512H19.153c.999 41.49 15.57 79.808 37.692 98.512l4.108 3.472-4.108 3.472c-22.826 19.3-36.77 55.897-37.698 98.512zm145.629 9.105H9.966v-4.553c0-44.79 13.799-84.117 37.137-106.548C24.41 90.554 9.965 49.504 9.965 6.117V1.564h154.81v4.553c0 43.388-14.443 84.437-37.137 106.525 23.34 22.431 37.138 61.757 37.138 106.548v4.553z"
        fill="#ACD2ED"
      />
          
      <g
        transform="translate(0 .836)"
      >
              
        <mask
          fill="#fff"
          id="d"
        >
                  
          <use
            xlinkHref="#c"
          />
                
        </mask>
              
        <path
          d="M171.088 13.733H3.653C1.635 13.733 0 12.673 0 11.365V2.442C0 1.134 1.635.074 3.653.074h167.435c2.018 0 3.654 1.06 3.654 2.368v8.923c0 1.308-1.636 2.368-3.654 2.368"
          fill="#0B7EB5"
          mask="url(#d)"
        />
            
      </g>
          
      <g
        transform="translate(0 210.267)"
      >
              
        <mask
          fill="#fff"
          id="f"
        >
                  
          <use
            xlinkHref="#e"
          />
                
        </mask>
              
        <path
          d="M171.088 13.659H3.653C1.635 13.659 0 12.599 0 11.29V2.368C0 1.059 1.635 0 3.653 0h167.435c2.018 0 3.654 1.06 3.654 2.368v8.923c0 1.308-1.636 2.368-3.654 2.368"
          fill="#0B7EB5"
          mask="url(#f)"
        />
            
      </g>
        
    </g>
  </svg>
</div>
`;

exports[`<IconHourglassRunningOut /> DOM element render correctly when no props are passed 2`] = `".htz-a{vertical-align:-0.15em}.htz-b{color:inherit}.htz-c{fill:#FFF}"`;

exports[`<IconHourglassRunningOut /> styles responsively set misc styles on an icon 1`] = `
<div>
  <svg
    height={224}
    viewBox="0 0 175 224"
    width={175}
    xmlnsXlink="http://www.w3.org/1999/xlink"
  >
      
    <defs>
          
      <path
        d="M0 0h118v147H0z"
        id="a"
      />
          
      <path
        d="M0 .075h174.741v13.658H0z"
        id="c"
      />
          
      <path
        d="M0 0h174.741v13.66H0z"
        id="e"
      />
        
    </defs>
      
    <g
      fill="none"
      fillRule="evenodd"
    >
          
      <path
        d="M28.768 213.642l-.914-.034c.687-18.65 3.97-36.753 9.492-52.354l.861.302c-5.493 15.516-8.757 33.527-9.44 52.086m3.014 0l-.913-.034c.28-7.583.984-15.108 2.093-22.365l.903.137a195.438 195.438 0 0 0-2.083 22.262"
        fill="#92D7E7"
      />
          
      <g
        transform="translate(24 60)"
      >
              
        <mask
          fill="#fff"
          id="b"
        >
                  
          <use
            xlinkHref="#a"
          />
                
        </mask>
              
        <path
          d="M0 147h118c0-10.889-39.206-32.615-53.645-38.176V58.686c8.122-3.133 37.901-4.242 53.243-58.686 0 0-99.38 24.175-93.834 31.873 10.916 15.15 23.19 22.062 31.567 25.173v50.597C22.844 109.203 0 127.037 0 147"
          fill="orange"
          mask="url(#b)"
        />
            
      </g>
          
      <path
        d="M112.962 119.338l-6.78-6.81 6.78-4.49c20.958-17.718 34.945-52.295 36.545-91.45h-37.573c-.541 42.797-6.007 80.138-28.079 98.797 22.13 18.709 27.566 53.269 28.084 98.797h37.582c-1.492-40.975-14.92-76.55-36.56-94.844"
        fill="#ACD2ED"
        opacity={0.538}
      />
          
      <path
        d="M61.346 108.417C40.319 90.64 26.272 55.538 24.686 16.809l.913-.037c1.575 38.482 15.499 73.333 36.337 90.95l-.59.695zM25.537 213.642l-.913-.034c1.518-41.265 15.245-76.74 36.722-94.897l.59.696c-21.283 17.993-34.89 53.22-36.399 94.235"
        fill="#92D7E7"
      />
          
      <path
        d="M65.867 108.417c-11.827-10-21.53-25.33-28.061-44.333l.864-.295c6.477 18.848 16.086 34.04 27.787 43.932l-.59.696z"
        fill="#92D7E7"
      />
          
      <path
        d="M70.388 108.416c-5.622-4.753-10.805-10.759-15.404-17.85l.767-.495c4.55 7.017 9.673 12.955 15.227 17.651l-.59.694z"
        fill="#92D7E7"
      />
          
      <path
        d="M19.147 214.638h136.447c-.928-42.616-14.872-79.214-37.698-98.512l-4.108-3.472 4.108-3.472c22.123-18.704 36.694-57.02 37.692-98.512H19.153c.999 41.49 15.57 79.808 37.692 98.512l4.108 3.472-4.108 3.472c-22.826 19.3-36.77 55.897-37.698 98.512zm145.629 9.105H9.966v-4.553c0-44.79 13.799-84.117 37.137-106.548C24.41 90.554 9.965 49.504 9.965 6.117V1.564h154.81v4.553c0 43.388-14.443 84.437-37.137 106.525 23.34 22.431 37.138 61.757 37.138 106.548v4.553z"
        fill="#ACD2ED"
      />
          
      <g
        transform="translate(0 .836)"
      >
              
        <mask
          fill="#fff"
          id="d"
        >
                  
          <use
            xlinkHref="#c"
          />
                
        </mask>
              
        <path
          d="M171.088 13.733H3.653C1.635 13.733 0 12.673 0 11.365V2.442C0 1.134 1.635.074 3.653.074h167.435c2.018 0 3.654 1.06 3.654 2.368v8.923c0 1.308-1.636 2.368-3.654 2.368"
          fill="#0B7EB5"
          mask="url(#d)"
        />
            
      </g>
          
      <g
        transform="translate(0 210.267)"
      >
              
        <mask
          fill="#fff"
          id="f"
        >
                  
          <use
            xlinkHref="#e"
          />
                
        </mask>
              
        <path
          d="M171.088 13.659H3.653C1.635 13.659 0 12.599 0 11.29V2.368C0 1.059 1.635 0 3.653 0h167.435c2.018 0 3.654 1.06 3.654 2.368v8.923c0 1.308-1.636 2.368-3.654 2.368"
          fill="#0B7EB5"
          mask="url(#f)"
        />
            
      </g>
        
    </g>
  </svg>
</div>
`;

exports[`<IconHourglassRunningOut /> styles responsively set misc styles on an icon 2`] = `".htz-a{vertical-align:-0.15em}.htz-b{color:inherit}.htz-c{fill:#FFF}@media (max-width: 79.9375em){.htz-d{position:relative}}@media (min-width: 80em){.htz-e{position:static}}"`;

exports[`<IconHourglassRunningOut /> styles set icon's color 1`] = `
<div>
  <svg
    height={224}
    viewBox="0 0 175 224"
    width={175}
    xmlnsXlink="http://www.w3.org/1999/xlink"
  >
      
    <defs>
          
      <path
        d="M0 0h118v147H0z"
        id="a"
      />
          
      <path
        d="M0 .075h174.741v13.658H0z"
        id="c"
      />
          
      <path
        d="M0 0h174.741v13.66H0z"
        id="e"
      />
        
    </defs>
      
    <g
      fill="none"
      fillRule="evenodd"
    >
          
      <path
        d="M28.768 213.642l-.914-.034c.687-18.65 3.97-36.753 9.492-52.354l.861.302c-5.493 15.516-8.757 33.527-9.44 52.086m3.014 0l-.913-.034c.28-7.583.984-15.108 2.093-22.365l.903.137a195.438 195.438 0 0 0-2.083 22.262"
        fill="#92D7E7"
      />
          
      <g
        transform="translate(24 60)"
      >
              
        <mask
          fill="#fff"
          id="b"
        >
                  
          <use
            xlinkHref="#a"
          />
                
        </mask>
              
        <path
          d="M0 147h118c0-10.889-39.206-32.615-53.645-38.176V58.686c8.122-3.133 37.901-4.242 53.243-58.686 0 0-99.38 24.175-93.834 31.873 10.916 15.15 23.19 22.062 31.567 25.173v50.597C22.844 109.203 0 127.037 0 147"
          fill="orange"
          mask="url(#b)"
        />
            
      </g>
          
      <path
        d="M112.962 119.338l-6.78-6.81 6.78-4.49c20.958-17.718 34.945-52.295 36.545-91.45h-37.573c-.541 42.797-6.007 80.138-28.079 98.797 22.13 18.709 27.566 53.269 28.084 98.797h37.582c-1.492-40.975-14.92-76.55-36.56-94.844"
        fill="#ACD2ED"
        opacity={0.538}
      />
          
      <path
        d="M61.346 108.417C40.319 90.64 26.272 55.538 24.686 16.809l.913-.037c1.575 38.482 15.499 73.333 36.337 90.95l-.59.695zM25.537 213.642l-.913-.034c1.518-41.265 15.245-76.74 36.722-94.897l.59.696c-21.283 17.993-34.89 53.22-36.399 94.235"
        fill="#92D7E7"
      />
          
      <path
        d="M65.867 108.417c-11.827-10-21.53-25.33-28.061-44.333l.864-.295c6.477 18.848 16.086 34.04 27.787 43.932l-.59.696z"
        fill="#92D7E7"
      />
          
      <path
        d="M70.388 108.416c-5.622-4.753-10.805-10.759-15.404-17.85l.767-.495c4.55 7.017 9.673 12.955 15.227 17.651l-.59.694z"
        fill="#92D7E7"
      />
          
      <path
        d="M19.147 214.638h136.447c-.928-42.616-14.872-79.214-37.698-98.512l-4.108-3.472 4.108-3.472c22.123-18.704 36.694-57.02 37.692-98.512H19.153c.999 41.49 15.57 79.808 37.692 98.512l4.108 3.472-4.108 3.472c-22.826 19.3-36.77 55.897-37.698 98.512zm145.629 9.105H9.966v-4.553c0-44.79 13.799-84.117 37.137-106.548C24.41 90.554 9.965 49.504 9.965 6.117V1.564h154.81v4.553c0 43.388-14.443 84.437-37.137 106.525 23.34 22.431 37.138 61.757 37.138 106.548v4.553z"
        fill="#ACD2ED"
      />
          
      <g
        transform="translate(0 .836)"
      >
              
        <mask
          fill="#fff"
          id="d"
        >
                  
          <use
            xlinkHref="#c"
          />
                
        </mask>
              
        <path
          d="M171.088 13.733H3.653C1.635 13.733 0 12.673 0 11.365V2.442C0 1.134 1.635.074 3.653.074h167.435c2.018 0 3.654 1.06 3.654 2.368v8.923c0 1.308-1.636 2.368-3.654 2.368"
          fill="#0B7EB5"
          mask="url(#d)"
        />
            
      </g>
          
      <g
        transform="translate(0 210.267)"
      >
              
        <mask
          fill="#fff"
          id="f"
        >
                  
          <use
            xlinkHref="#e"
          />
                
        </mask>
              
        <path
          d="M171.088 13.659H3.653C1.635 13.659 0 12.599 0 11.29V2.368C0 1.059 1.635 0 3.653 0h167.435c2.018 0 3.654 1.06 3.654 2.368v8.923c0 1.308-1.636 2.368-3.654 2.368"
          fill="#0B7EB5"
          mask="url(#f)"
        />
            
      </g>
        
    </g>
  </svg>
</div>
`;

exports[`<IconHourglassRunningOut /> styles set icon's color 2`] = `".htz-a{vertical-align:-0.15em}.htz-b{color:#0B7EB5}.htz-c{fill:#FFF}"`;

exports[`<IconHourglassRunningOut /> styles set icon's color responsively 1`] = `
<div>
  <svg
    height={224}
    viewBox="0 0 175 224"
    width={175}
    xmlnsXlink="http://www.w3.org/1999/xlink"
  >
      
    <defs>
          
      <path
        d="M0 0h118v147H0z"
        id="a"
      />
          
      <path
        d="M0 .075h174.741v13.658H0z"
        id="c"
      />
          
      <path
        d="M0 0h174.741v13.66H0z"
        id="e"
      />
        
    </defs>
      
    <g
      fill="none"
      fillRule="evenodd"
    >
          
      <path
        d="M28.768 213.642l-.914-.034c.687-18.65 3.97-36.753 9.492-52.354l.861.302c-5.493 15.516-8.757 33.527-9.44 52.086m3.014 0l-.913-.034c.28-7.583.984-15.108 2.093-22.365l.903.137a195.438 195.438 0 0 0-2.083 22.262"
        fill="#92D7E7"
      />
          
      <g
        transform="translate(24 60)"
      >
              
        <mask
          fill="#fff"
          id="b"
        >
                  
          <use
            xlinkHref="#a"
          />
                
        </mask>
              
        <path
          d="M0 147h118c0-10.889-39.206-32.615-53.645-38.176V58.686c8.122-3.133 37.901-4.242 53.243-58.686 0 0-99.38 24.175-93.834 31.873 10.916 15.15 23.19 22.062 31.567 25.173v50.597C22.844 109.203 0 127.037 0 147"
          fill="orange"
          mask="url(#b)"
        />
            
      </g>
          
      <path
        d="M112.962 119.338l-6.78-6.81 6.78-4.49c20.958-17.718 34.945-52.295 36.545-91.45h-37.573c-.541 42.797-6.007 80.138-28.079 98.797 22.13 18.709 27.566 53.269 28.084 98.797h37.582c-1.492-40.975-14.92-76.55-36.56-94.844"
        fill="#ACD2ED"
        opacity={0.538}
      />
          
      <path
        d="M61.346 108.417C40.319 90.64 26.272 55.538 24.686 16.809l.913-.037c1.575 38.482 15.499 73.333 36.337 90.95l-.59.695zM25.537 213.642l-.913-.034c1.518-41.265 15.245-76.74 36.722-94.897l.59.696c-21.283 17.993-34.89 53.22-36.399 94.235"
        fill="#92D7E7"
      />
          
      <path
        d="M65.867 108.417c-11.827-10-21.53-25.33-28.061-44.333l.864-.295c6.477 18.848 16.086 34.04 27.787 43.932l-.59.696z"
        fill="#92D7E7"
      />
          
      <path
        d="M70.388 108.416c-5.622-4.753-10.805-10.759-15.404-17.85l.767-.495c4.55 7.017 9.673 12.955 15.227 17.651l-.59.694z"
        fill="#92D7E7"
      />
          
      <path
        d="M19.147 214.638h136.447c-.928-42.616-14.872-79.214-37.698-98.512l-4.108-3.472 4.108-3.472c22.123-18.704 36.694-57.02 37.692-98.512H19.153c.999 41.49 15.57 79.808 37.692 98.512l4.108 3.472-4.108 3.472c-22.826 19.3-36.77 55.897-37.698 98.512zm145.629 9.105H9.966v-4.553c0-44.79 13.799-84.117 37.137-106.548C24.41 90.554 9.965 49.504 9.965 6.117V1.564h154.81v4.553c0 43.388-14.443 84.437-37.137 106.525 23.34 22.431 37.138 61.757 37.138 106.548v4.553z"
        fill="#ACD2ED"
      />
          
      <g
        transform="translate(0 .836)"
      >
              
        <mask
          fill="#fff"
          id="d"
        >
                  
          <use
            xlinkHref="#c"
          />
                
        </mask>
              
        <path
          d="M171.088 13.733H3.653C1.635 13.733 0 12.673 0 11.365V2.442C0 1.134 1.635.074 3.653.074h167.435c2.018 0 3.654 1.06 3.654 2.368v8.923c0 1.308-1.636 2.368-3.654 2.368"
          fill="#0B7EB5"
          mask="url(#d)"
        />
            
      </g>
          
      <g
        transform="translate(0 210.267)"
      >
              
        <mask
          fill="#fff"
          id="f"
        >
                  
          <use
            xlinkHref="#e"
          />
                
        </mask>
              
        <path
          d="M171.088 13.659H3.653C1.635 13.659 0 12.599 0 11.29V2.368C0 1.059 1.635 0 3.653 0h167.435c2.018 0 3.654 1.06 3.654 2.368v8.923c0 1.308-1.636 2.368-3.654 2.368"
          fill="#0B7EB5"
          mask="url(#f)"
        />
            
      </g>
        
    </g>
  </svg>
</div>
`;

exports[`<IconHourglassRunningOut /> styles set icon's color responsively 2`] = `".htz-a{vertical-align:-0.15em}.htz-d{fill:#FFF}@media (max-width: 79.9375em){.htz-b{color:#0B7EB5}}@media (min-width: 80em){.htz-c{color:#2D2D2D}}"`;

exports[`<IconHourglassRunningOut /> styles set icon's fill 1`] = `
<div>
  <svg
    height={224}
    viewBox="0 0 175 224"
    width={175}
    xmlnsXlink="http://www.w3.org/1999/xlink"
  >
      
    <defs>
          
      <path
        d="M0 0h118v147H0z"
        id="a"
      />
          
      <path
        d="M0 .075h174.741v13.658H0z"
        id="c"
      />
          
      <path
        d="M0 0h174.741v13.66H0z"
        id="e"
      />
        
    </defs>
      
    <g
      fill="none"
      fillRule="evenodd"
    >
          
      <path
        d="M28.768 213.642l-.914-.034c.687-18.65 3.97-36.753 9.492-52.354l.861.302c-5.493 15.516-8.757 33.527-9.44 52.086m3.014 0l-.913-.034c.28-7.583.984-15.108 2.093-22.365l.903.137a195.438 195.438 0 0 0-2.083 22.262"
        fill="#92D7E7"
      />
          
      <g
        transform="translate(24 60)"
      >
              
        <mask
          fill="#fff"
          id="b"
        >
                  
          <use
            xlinkHref="#a"
          />
                
        </mask>
              
        <path
          d="M0 147h118c0-10.889-39.206-32.615-53.645-38.176V58.686c8.122-3.133 37.901-4.242 53.243-58.686 0 0-99.38 24.175-93.834 31.873 10.916 15.15 23.19 22.062 31.567 25.173v50.597C22.844 109.203 0 127.037 0 147"
          fill="orange"
          mask="url(#b)"
        />
            
      </g>
          
      <path
        d="M112.962 119.338l-6.78-6.81 6.78-4.49c20.958-17.718 34.945-52.295 36.545-91.45h-37.573c-.541 42.797-6.007 80.138-28.079 98.797 22.13 18.709 27.566 53.269 28.084 98.797h37.582c-1.492-40.975-14.92-76.55-36.56-94.844"
        fill="#ACD2ED"
        opacity={0.538}
      />
          
      <path
        d="M61.346 108.417C40.319 90.64 26.272 55.538 24.686 16.809l.913-.037c1.575 38.482 15.499 73.333 36.337 90.95l-.59.695zM25.537 213.642l-.913-.034c1.518-41.265 15.245-76.74 36.722-94.897l.59.696c-21.283 17.993-34.89 53.22-36.399 94.235"
        fill="#92D7E7"
      />
          
      <path
        d="M65.867 108.417c-11.827-10-21.53-25.33-28.061-44.333l.864-.295c6.477 18.848 16.086 34.04 27.787 43.932l-.59.696z"
        fill="#92D7E7"
      />
          
      <path
        d="M70.388 108.416c-5.622-4.753-10.805-10.759-15.404-17.85l.767-.495c4.55 7.017 9.673 12.955 15.227 17.651l-.59.694z"
        fill="#92D7E7"
      />
          
      <path
        d="M19.147 214.638h136.447c-.928-42.616-14.872-79.214-37.698-98.512l-4.108-3.472 4.108-3.472c22.123-18.704 36.694-57.02 37.692-98.512H19.153c.999 41.49 15.57 79.808 37.692 98.512l4.108 3.472-4.108 3.472c-22.826 19.3-36.77 55.897-37.698 98.512zm145.629 9.105H9.966v-4.553c0-44.79 13.799-84.117 37.137-106.548C24.41 90.554 9.965 49.504 9.965 6.117V1.564h154.81v4.553c0 43.388-14.443 84.437-37.137 106.525 23.34 22.431 37.138 61.757 37.138 106.548v4.553z"
        fill="#ACD2ED"
      />
          
      <g
        transform="translate(0 .836)"
      >
              
        <mask
          fill="#fff"
          id="d"
        >
                  
          <use
            xlinkHref="#c"
          />
                
        </mask>
              
        <path
          d="M171.088 13.733H3.653C1.635 13.733 0 12.673 0 11.365V2.442C0 1.134 1.635.074 3.653.074h167.435c2.018 0 3.654 1.06 3.654 2.368v8.923c0 1.308-1.636 2.368-3.654 2.368"
          fill="#0B7EB5"
          mask="url(#d)"
        />
            
      </g>
          
      <g
        transform="translate(0 210.267)"
      >
              
        <mask
          fill="#fff"
          id="f"
        >
                  
          <use
            xlinkHref="#e"
          />
                
        </mask>
              
        <path
          d="M171.088 13.659H3.653C1.635 13.659 0 12.599 0 11.29V2.368C0 1.059 1.635 0 3.653 0h167.435c2.018 0 3.654 1.06 3.654 2.368v8.923c0 1.308-1.636 2.368-3.654 2.368"
          fill="#0B7EB5"
          mask="url(#f)"
        />
            
      </g>
        
    </g>
  </svg>
</div>
`;

exports[`<IconHourglassRunningOut /> styles set icon's fill 2`] = `".htz-a{vertical-align:-0.15em}.htz-b{color:inherit}.htz-c{fill:#0B7EB5}"`;

exports[`<IconHourglassRunningOut /> styles set icon's fill responsively 1`] = `
<div>
  <svg
    height={224}
    viewBox="0 0 175 224"
    width={175}
    xmlnsXlink="http://www.w3.org/1999/xlink"
  >
      
    <defs>
          
      <path
        d="M0 0h118v147H0z"
        id="a"
      />
          
      <path
        d="M0 .075h174.741v13.658H0z"
        id="c"
      />
          
      <path
        d="M0 0h174.741v13.66H0z"
        id="e"
      />
        
    </defs>
      
    <g
      fill="none"
      fillRule="evenodd"
    >
          
      <path
        d="M28.768 213.642l-.914-.034c.687-18.65 3.97-36.753 9.492-52.354l.861.302c-5.493 15.516-8.757 33.527-9.44 52.086m3.014 0l-.913-.034c.28-7.583.984-15.108 2.093-22.365l.903.137a195.438 195.438 0 0 0-2.083 22.262"
        fill="#92D7E7"
      />
          
      <g
        transform="translate(24 60)"
      >
              
        <mask
          fill="#fff"
          id="b"
        >
                  
          <use
            xlinkHref="#a"
          />
                
        </mask>
              
        <path
          d="M0 147h118c0-10.889-39.206-32.615-53.645-38.176V58.686c8.122-3.133 37.901-4.242 53.243-58.686 0 0-99.38 24.175-93.834 31.873 10.916 15.15 23.19 22.062 31.567 25.173v50.597C22.844 109.203 0 127.037 0 147"
          fill="orange"
          mask="url(#b)"
        />
            
      </g>
          
      <path
        d="M112.962 119.338l-6.78-6.81 6.78-4.49c20.958-17.718 34.945-52.295 36.545-91.45h-37.573c-.541 42.797-6.007 80.138-28.079 98.797 22.13 18.709 27.566 53.269 28.084 98.797h37.582c-1.492-40.975-14.92-76.55-36.56-94.844"
        fill="#ACD2ED"
        opacity={0.538}
      />
          
      <path
        d="M61.346 108.417C40.319 90.64 26.272 55.538 24.686 16.809l.913-.037c1.575 38.482 15.499 73.333 36.337 90.95l-.59.695zM25.537 213.642l-.913-.034c1.518-41.265 15.245-76.74 36.722-94.897l.59.696c-21.283 17.993-34.89 53.22-36.399 94.235"
        fill="#92D7E7"
      />
          
      <path
        d="M65.867 108.417c-11.827-10-21.53-25.33-28.061-44.333l.864-.295c6.477 18.848 16.086 34.04 27.787 43.932l-.59.696z"
        fill="#92D7E7"
      />
          
      <path
        d="M70.388 108.416c-5.622-4.753-10.805-10.759-15.404-17.85l.767-.495c4.55 7.017 9.673 12.955 15.227 17.651l-.59.694z"
        fill="#92D7E7"
      />
          
      <path
        d="M19.147 214.638h136.447c-.928-42.616-14.872-79.214-37.698-98.512l-4.108-3.472 4.108-3.472c22.123-18.704 36.694-57.02 37.692-98.512H19.153c.999 41.49 15.57 79.808 37.692 98.512l4.108 3.472-4.108 3.472c-22.826 19.3-36.77 55.897-37.698 98.512zm145.629 9.105H9.966v-4.553c0-44.79 13.799-84.117 37.137-106.548C24.41 90.554 9.965 49.504 9.965 6.117V1.564h154.81v4.553c0 43.388-14.443 84.437-37.137 106.525 23.34 22.431 37.138 61.757 37.138 106.548v4.553z"
        fill="#ACD2ED"
      />
          
      <g
        transform="translate(0 .836)"
      >
              
        <mask
          fill="#fff"
          id="d"
        >
                  
          <use
            xlinkHref="#c"
          />
                
        </mask>
              
        <path
          d="M171.088 13.733H3.653C1.635 13.733 0 12.673 0 11.365V2.442C0 1.134 1.635.074 3.653.074h167.435c2.018 0 3.654 1.06 3.654 2.368v8.923c0 1.308-1.636 2.368-3.654 2.368"
          fill="#0B7EB5"
          mask="url(#d)"
        />
            
      </g>
          
      <g
        transform="translate(0 210.267)"
      >
              
        <mask
          fill="#fff"
          id="f"
        >
                  
          <use
            xlinkHref="#e"
          />
                
        </mask>
              
        <path
          d="M171.088 13.659H3.653C1.635 13.659 0 12.599 0 11.29V2.368C0 1.059 1.635 0 3.653 0h167.435c2.018 0 3.654 1.06 3.654 2.368v8.923c0 1.308-1.636 2.368-3.654 2.368"
          fill="#0B7EB5"
          mask="url(#f)"
        />
            
      </g>
        
    </g>
  </svg>
</div>
`;

exports[`<IconHourglassRunningOut /> styles set icon's fill responsively 2`] = `".htz-a{vertical-align:-0.15em}.htz-b{color:inherit}@media (max-width: 79.9375em){.htz-c{fill:#0B7EB5}}@media (min-width: 80em){.htz-d{fill:#2D2D2D}}"`;

exports[`<IconHourglassRunningOut /> styles set icon's size 1`] = `
<div>
  <svg
    height={224}
    viewBox="0 0 175 224"
    width={175}
    xmlnsXlink="http://www.w3.org/1999/xlink"
  >
      
    <defs>
          
      <path
        d="M0 0h118v147H0z"
        id="a"
      />
          
      <path
        d="M0 .075h174.741v13.658H0z"
        id="c"
      />
          
      <path
        d="M0 0h174.741v13.66H0z"
        id="e"
      />
        
    </defs>
      
    <g
      fill="none"
      fillRule="evenodd"
    >
          
      <path
        d="M28.768 213.642l-.914-.034c.687-18.65 3.97-36.753 9.492-52.354l.861.302c-5.493 15.516-8.757 33.527-9.44 52.086m3.014 0l-.913-.034c.28-7.583.984-15.108 2.093-22.365l.903.137a195.438 195.438 0 0 0-2.083 22.262"
        fill="#92D7E7"
      />
          
      <g
        transform="translate(24 60)"
      >
              
        <mask
          fill="#fff"
          id="b"
        >
                  
          <use
            xlinkHref="#a"
          />
                
        </mask>
              
        <path
          d="M0 147h118c0-10.889-39.206-32.615-53.645-38.176V58.686c8.122-3.133 37.901-4.242 53.243-58.686 0 0-99.38 24.175-93.834 31.873 10.916 15.15 23.19 22.062 31.567 25.173v50.597C22.844 109.203 0 127.037 0 147"
          fill="orange"
          mask="url(#b)"
        />
            
      </g>
          
      <path
        d="M112.962 119.338l-6.78-6.81 6.78-4.49c20.958-17.718 34.945-52.295 36.545-91.45h-37.573c-.541 42.797-6.007 80.138-28.079 98.797 22.13 18.709 27.566 53.269 28.084 98.797h37.582c-1.492-40.975-14.92-76.55-36.56-94.844"
        fill="#ACD2ED"
        opacity={0.538}
      />
          
      <path
        d="M61.346 108.417C40.319 90.64 26.272 55.538 24.686 16.809l.913-.037c1.575 38.482 15.499 73.333 36.337 90.95l-.59.695zM25.537 213.642l-.913-.034c1.518-41.265 15.245-76.74 36.722-94.897l.59.696c-21.283 17.993-34.89 53.22-36.399 94.235"
        fill="#92D7E7"
      />
          
      <path
        d="M65.867 108.417c-11.827-10-21.53-25.33-28.061-44.333l.864-.295c6.477 18.848 16.086 34.04 27.787 43.932l-.59.696z"
        fill="#92D7E7"
      />
          
      <path
        d="M70.388 108.416c-5.622-4.753-10.805-10.759-15.404-17.85l.767-.495c4.55 7.017 9.673 12.955 15.227 17.651l-.59.694z"
        fill="#92D7E7"
      />
          
      <path
        d="M19.147 214.638h136.447c-.928-42.616-14.872-79.214-37.698-98.512l-4.108-3.472 4.108-3.472c22.123-18.704 36.694-57.02 37.692-98.512H19.153c.999 41.49 15.57 79.808 37.692 98.512l4.108 3.472-4.108 3.472c-22.826 19.3-36.77 55.897-37.698 98.512zm145.629 9.105H9.966v-4.553c0-44.79 13.799-84.117 37.137-106.548C24.41 90.554 9.965 49.504 9.965 6.117V1.564h154.81v4.553c0 43.388-14.443 84.437-37.137 106.525 23.34 22.431 37.138 61.757 37.138 106.548v4.553z"
        fill="#ACD2ED"
      />
          
      <g
        transform="translate(0 .836)"
      >
              
        <mask
          fill="#fff"
          id="d"
        >
                  
          <use
            xlinkHref="#c"
          />
                
        </mask>
              
        <path
          d="M171.088 13.733H3.653C1.635 13.733 0 12.673 0 11.365V2.442C0 1.134 1.635.074 3.653.074h167.435c2.018 0 3.654 1.06 3.654 2.368v8.923c0 1.308-1.636 2.368-3.654 2.368"
          fill="#0B7EB5"
          mask="url(#d)"
        />
            
      </g>
          
      <g
        transform="translate(0 210.267)"
      >
              
        <mask
          fill="#fff"
          id="f"
        >
                  
          <use
            xlinkHref="#e"
          />
                
        </mask>
              
        <path
          d="M171.088 13.659H3.653C1.635 13.659 0 12.599 0 11.29V2.368C0 1.059 1.635 0 3.653 0h167.435c2.018 0 3.654 1.06 3.654 2.368v8.923c0 1.308-1.636 2.368-3.654 2.368"
          fill="#0B7EB5"
          mask="url(#f)"
        />
            
      </g>
        
    </g>
  </svg>
</div>
`;

exports[`<IconHourglassRunningOut /> styles set icon's size 2`] = `".htz-a{vertical-align:-0.15em}.htz-b{color:inherit}.htz-c{fill:#FFF}.htz-d{font-size:6rem}"`;

exports[`<IconHourglassRunningOut /> styles set icon's size responsively 1`] = `
<div>
  <svg
    height={224}
    viewBox="0 0 175 224"
    width={175}
    xmlnsXlink="http://www.w3.org/1999/xlink"
  >
      
    <defs>
          
      <path
        d="M0 0h118v147H0z"
        id="a"
      />
          
      <path
        d="M0 .075h174.741v13.658H0z"
        id="c"
      />
          
      <path
        d="M0 0h174.741v13.66H0z"
        id="e"
      />
        
    </defs>
      
    <g
      fill="none"
      fillRule="evenodd"
    >
          
      <path
        d="M28.768 213.642l-.914-.034c.687-18.65 3.97-36.753 9.492-52.354l.861.302c-5.493 15.516-8.757 33.527-9.44 52.086m3.014 0l-.913-.034c.28-7.583.984-15.108 2.093-22.365l.903.137a195.438 195.438 0 0 0-2.083 22.262"
        fill="#92D7E7"
      />
          
      <g
        transform="translate(24 60)"
      >
              
        <mask
          fill="#fff"
          id="b"
        >
                  
          <use
            xlinkHref="#a"
          />
                
        </mask>
              
        <path
          d="M0 147h118c0-10.889-39.206-32.615-53.645-38.176V58.686c8.122-3.133 37.901-4.242 53.243-58.686 0 0-99.38 24.175-93.834 31.873 10.916 15.15 23.19 22.062 31.567 25.173v50.597C22.844 109.203 0 127.037 0 147"
          fill="orange"
          mask="url(#b)"
        />
            
      </g>
          
      <path
        d="M112.962 119.338l-6.78-6.81 6.78-4.49c20.958-17.718 34.945-52.295 36.545-91.45h-37.573c-.541 42.797-6.007 80.138-28.079 98.797 22.13 18.709 27.566 53.269 28.084 98.797h37.582c-1.492-40.975-14.92-76.55-36.56-94.844"
        fill="#ACD2ED"
        opacity={0.538}
      />
          
      <path
        d="M61.346 108.417C40.319 90.64 26.272 55.538 24.686 16.809l.913-.037c1.575 38.482 15.499 73.333 36.337 90.95l-.59.695zM25.537 213.642l-.913-.034c1.518-41.265 15.245-76.74 36.722-94.897l.59.696c-21.283 17.993-34.89 53.22-36.399 94.235"
        fill="#92D7E7"
      />
          
      <path
        d="M65.867 108.417c-11.827-10-21.53-25.33-28.061-44.333l.864-.295c6.477 18.848 16.086 34.04 27.787 43.932l-.59.696z"
        fill="#92D7E7"
      />
          
      <path
        d="M70.388 108.416c-5.622-4.753-10.805-10.759-15.404-17.85l.767-.495c4.55 7.017 9.673 12.955 15.227 17.651l-.59.694z"
        fill="#92D7E7"
      />
          
      <path
        d="M19.147 214.638h136.447c-.928-42.616-14.872-79.214-37.698-98.512l-4.108-3.472 4.108-3.472c22.123-18.704 36.694-57.02 37.692-98.512H19.153c.999 41.49 15.57 79.808 37.692 98.512l4.108 3.472-4.108 3.472c-22.826 19.3-36.77 55.897-37.698 98.512zm145.629 9.105H9.966v-4.553c0-44.79 13.799-84.117 37.137-106.548C24.41 90.554 9.965 49.504 9.965 6.117V1.564h154.81v4.553c0 43.388-14.443 84.437-37.137 106.525 23.34 22.431 37.138 61.757 37.138 106.548v4.553z"
        fill="#ACD2ED"
      />
          
      <g
        transform="translate(0 .836)"
      >
              
        <mask
          fill="#fff"
          id="d"
        >
                  
          <use
            xlinkHref="#c"
          />
                
        </mask>
              
        <path
          d="M171.088 13.733H3.653C1.635 13.733 0 12.673 0 11.365V2.442C0 1.134 1.635.074 3.653.074h167.435c2.018 0 3.654 1.06 3.654 2.368v8.923c0 1.308-1.636 2.368-3.654 2.368"
          fill="#0B7EB5"
          mask="url(#d)"
        />
            
      </g>
          
      <g
        transform="translate(0 210.267)"
      >
              
        <mask
          fill="#fff"
          id="f"
        >
                  
          <use
            xlinkHref="#e"
          />
                
        </mask>
              
        <path
          d="M171.088 13.659H3.653C1.635 13.659 0 12.599 0 11.29V2.368C0 1.059 1.635 0 3.653 0h167.435c2.018 0 3.654 1.06 3.654 2.368v8.923c0 1.308-1.636 2.368-3.654 2.368"
          fill="#0B7EB5"
          mask="url(#f)"
        />
            
      </g>
        
    </g>
  </svg>
</div>
`;

exports[`<IconHourglassRunningOut /> styles set icon's size responsively 2`] = `".htz-a{vertical-align:-0.15em}.htz-b{color:inherit}.htz-c{fill:#FFF}@media (max-width: 79.9375em){.htz-d{font-size:6rem}}@media (min-width: 80em){.htz-e{font-size:7rem}}"`;

exports[`<IconHourglassRunningOut /> styles set misc styles on an icon 1`] = `
<div>
  <svg
    height={224}
    viewBox="0 0 175 224"
    width={175}
    xmlnsXlink="http://www.w3.org/1999/xlink"
  >
      
    <defs>
          
      <path
        d="M0 0h118v147H0z"
        id="a"
      />
          
      <path
        d="M0 .075h174.741v13.658H0z"
        id="c"
      />
          
      <path
        d="M0 0h174.741v13.66H0z"
        id="e"
      />
        
    </defs>
      
    <g
      fill="none"
      fillRule="evenodd"
    >
          
      <path
        d="M28.768 213.642l-.914-.034c.687-18.65 3.97-36.753 9.492-52.354l.861.302c-5.493 15.516-8.757 33.527-9.44 52.086m3.014 0l-.913-.034c.28-7.583.984-15.108 2.093-22.365l.903.137a195.438 195.438 0 0 0-2.083 22.262"
        fill="#92D7E7"
      />
          
      <g
        transform="translate(24 60)"
      >
              
        <mask
          fill="#fff"
          id="b"
        >
                  
          <use
            xlinkHref="#a"
          />
                
        </mask>
              
        <path
          d="M0 147h118c0-10.889-39.206-32.615-53.645-38.176V58.686c8.122-3.133 37.901-4.242 53.243-58.686 0 0-99.38 24.175-93.834 31.873 10.916 15.15 23.19 22.062 31.567 25.173v50.597C22.844 109.203 0 127.037 0 147"
          fill="orange"
          mask="url(#b)"
        />
            
      </g>
          
      <path
        d="M112.962 119.338l-6.78-6.81 6.78-4.49c20.958-17.718 34.945-52.295 36.545-91.45h-37.573c-.541 42.797-6.007 80.138-28.079 98.797 22.13 18.709 27.566 53.269 28.084 98.797h37.582c-1.492-40.975-14.92-76.55-36.56-94.844"
        fill="#ACD2ED"
        opacity={0.538}
      />
          
      <path
        d="M61.346 108.417C40.319 90.64 26.272 55.538 24.686 16.809l.913-.037c1.575 38.482 15.499 73.333 36.337 90.95l-.59.695zM25.537 213.642l-.913-.034c1.518-41.265 15.245-76.74 36.722-94.897l.59.696c-21.283 17.993-34.89 53.22-36.399 94.235"
        fill="#92D7E7"
      />
          
      <path
        d="M65.867 108.417c-11.827-10-21.53-25.33-28.061-44.333l.864-.295c6.477 18.848 16.086 34.04 27.787 43.932l-.59.696z"
        fill="#92D7E7"
      />
          
      <path
        d="M70.388 108.416c-5.622-4.753-10.805-10.759-15.404-17.85l.767-.495c4.55 7.017 9.673 12.955 15.227 17.651l-.59.694z"
        fill="#92D7E7"
      />
          
      <path
        d="M19.147 214.638h136.447c-.928-42.616-14.872-79.214-37.698-98.512l-4.108-3.472 4.108-3.472c22.123-18.704 36.694-57.02 37.692-98.512H19.153c.999 41.49 15.57 79.808 37.692 98.512l4.108 3.472-4.108 3.472c-22.826 19.3-36.77 55.897-37.698 98.512zm145.629 9.105H9.966v-4.553c0-44.79 13.799-84.117 37.137-106.548C24.41 90.554 9.965 49.504 9.965 6.117V1.564h154.81v4.553c0 43.388-14.443 84.437-37.137 106.525 23.34 22.431 37.138 61.757 37.138 106.548v4.553z"
        fill="#ACD2ED"
      />
          
      <g
        transform="translate(0 .836)"
      >
              
        <mask
          fill="#fff"
          id="d"
        >
                  
          <use
            xlinkHref="#c"
          />
                
        </mask>
              
        <path
          d="M171.088 13.733H3.653C1.635 13.733 0 12.673 0 11.365V2.442C0 1.134 1.635.074 3.653.074h167.435c2.018 0 3.654 1.06 3.654 2.368v8.923c0 1.308-1.636 2.368-3.654 2.368"
          fill="#0B7EB5"
          mask="url(#d)"
        />
            
      </g>
          
      <g
        transform="translate(0 210.267)"
      >
              
        <mask
          fill="#fff"
          id="f"
        >
                  
          <use
            xlinkHref="#e"
          />
                
        </mask>
              
        <path
          d="M171.088 13.659H3.653C1.635 13.659 0 12.599 0 11.29V2.368C0 1.059 1.635 0 3.653 0h167.435c2.018 0 3.654 1.06 3.654 2.368v8.923c0 1.308-1.636 2.368-3.654 2.368"
          fill="#0B7EB5"
          mask="url(#f)"
        />
            
      </g>
        
    </g>
  </svg>
</div>
`;

exports[`<IconHourglassRunningOut /> styles set misc styles on an icon 2`] = `".htz-a{vertical-align:-0.15em}.htz-b{color:inherit}.htz-c{fill:#FFF}.htz-d{position:relative}"`;
